--- a/Blog-Web/.env
+++ b/Blog-Web/.env
@@ -1,5 +1,5 @@
 VITE_APPWRITE_URL = "https://fra.cloud.appwrite.io/v1"
 VITE_APPWRITE_PRODUCT_ID = "68566a5c0020e73c31ae"
-VITE_APPWRITE_DATABASE_ID =""
-VITE_APPWRITE_COLLECTION_ID =""
-VITE_APPWRITE_BUCKET_ID =""
+VITE_APPWRITE_DATABASE_ID ="685670160037c09b0153"
+VITE_APPWRITE_COLLECTION_ID ="6856704d001dd6d42781"
+VITE_APPWRITE_BUCKET_ID ="68566fc60020f712d6bc"
