--- a/VibeScribe/package.json
+++ b/VibeScribe/package.json
@@ -10,18 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.3.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "@tinymce/tinymce-react": "^6.3.0",
     "appwrite": "^18.2.0",
+    "gsap": "^3.13.0",
     "html-react-parser": "^5.2.6",
+    "lucide-react": "^0.539.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
-    "tailwindcss": "^4.1.11"
+    "react-spinners": "^0.17.0",
+    "tailwindcss": "^4.1.11",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
